k8s_yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userService
  namespace: k8s-study-group
spec:
  selector:
    app: userService
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
